--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android:clean": "cd android; ./gradlew clean",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "android:release": "export ENTRY_FILE=index.tsx && cd android; ./gradlew bundleRelease"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -19,13 +20,21 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^27.4.1",
+    "@types/react": "^17.0.43",
+    "@types/react-native": "^0.67.3",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components-react-native": "^5.1.3",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-root-import": "^6.6.0",
+    "customize-cra": "^1.0.0",
     "eslint": "^7.32.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.6.3"
   },
   "jest": {
     "preset": "react-native"
